--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* #region COMMON */
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -21,14 +23,42 @@ button {
   cursor: pointer;
 }
 
-.container {
+/* .container {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
+} */
+
+.container {
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
+}
+
+@media only screen and (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
 }
 
 h1,
@@ -56,10 +86,17 @@ img {
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
-/*-------------------HEADER---------------------*/
+
+.hide {
+  display: none;
+}
+
+/* #endregion */
+
+/* #region HEADER */
 
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -88,6 +125,12 @@ img {
   margin-right: 76px;
 }
 
+@media screen and (min-width: 768px) {
+  .logo-web {
+    margin-right: 120px;
+  }
+}
+
 .logo-studio {
   color: #2e2f42;
 }
@@ -97,62 +140,110 @@ img {
   align-items: center;
 }
 
-.nav-menu {
-  display: flex;
-  gap: 40px;
+@media only screen and (min-width: 320px) {
+  .nav-menu {
+    display: none;
+  }
 }
 
-.menu-list-link {
-  display: block;
-  color: #2e2f42;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media only screen and (min-width: 768px) {
+  .nav-menu {
+    display: flex;
+    gap: 40px;
+  }
+  .menu-list-link {
+    display: block;
+    color: #2e2f42;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-list-link.active {
+    position: relative;
+  }
+
+  .menu-list-link.active {
+    color: #404bbf;
+  }
+
+  .menu-list-link:hover,
+  .menu-list-link:focus {
+    color: #404bbf;
+  }
+
+  .menu-list-link.active::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
 }
 
-.menu-list-link.active {
-  position: relative;
+@media only screen and (min-width: 320px) {
+  .address-container {
+    display: none;
+  }
 }
 
-.menu-list-link.active {
-  color: #404bbf;
-}
-
-.menu-list-link:hover,
-.menu-list-link:focus {
-  color: #404bbf;
-}
-
-.menu-list-link.active::after {
-  content: "";
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
-
-.address-container {
-  font-style: normal;
-  margin-left: auto;
+@media only screen and (min-width: 768px) {
+  .address-container {
+    font-style: normal;
+    margin-left: auto;
+  }
 }
 
 .address-list {
-  display: flex;
-  gap: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
 }
 
 .address-list-item {
-  line-height: 1.5;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: inherit;
-  padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .address-list-item {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    padding: 6px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .address-list-item {
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 }
 
 .address-list-item:hover,
@@ -162,7 +253,9 @@ img {
   color: #404bbf;
 }
 
-/*---------------------------HERO-SECTION-------------------------------*/
+/* #endregion */
+
+/* #region HERO-SECTION */
 
 .hero-section {
   max-width: 1440px;
@@ -219,7 +312,9 @@ img {
   min-width: 169px;
 }
 
-/*---------------------BENEFIT-SECTION--------------------------*/
+/* #endregion */
+
+/* #region BENEFIT-SECTION */
 
 .benefits-list {
   display: flex;
@@ -260,7 +355,9 @@ img {
   letter-spacing: 0.02em;
 }
 
-/*------------------TEAM-SECTION-------------------------*/
+/* #endregion */
+
+/* #region TEAM-SECTION */
 
 .team-section {
   background-color: #f4f4fd;
@@ -317,7 +414,9 @@ img {
   background: #fff;
 }
 
-/*---------------------PORTFOLIO-SECTION---------------------------*/
+/* #endregion */
+
+/* #region PORTFOLIO-SECTION */
 
 .portfolio-href {
   font-size: 36px;
@@ -396,7 +495,9 @@ img {
   color: #434455;
 }
 
-/*-----------------FOOTER--------------------------*/
+/* #endregion */
+
+/* #region FOOTER */
 
 .footer-section {
   background-color: #2e2f42;
@@ -428,6 +529,8 @@ img {
 .footer-logo-container {
   margin-right: 120px;
 }
+
+/* #endregion  */
 
 /* #region Social link */
 
@@ -614,14 +717,14 @@ img {
   top: 24px;
   right: 24px;
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 24px;
   height: 24px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   background-color: #e7e9fc;
-  align-items: center;
-  justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -803,4 +906,101 @@ img {
   text-align: center;
   /* margin-top: 16px; */
 }
+/* #endregion */
+
+/* #region MOBILE MENU */
+.menu-mobile {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 72px 16px 40px;
+  background-color: #fff;
+  /* transform: translateX(100%); */
+}
+
+.menu-mobile.is-open {
+  transform: translateX(0);
+}
+
+.close-menu-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #e7e9fc;
+  background-color: #fff;
+}
+.close-icon {
+  fill: #2e2f42;
+}
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: auto;
+  /* flex-grow: 1; */
+}
+.mobile-menu-list-link {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.mobile-address-list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 48px;
+  gap: 24px;
+}
+.mobile-address-list-item {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #434455;
+  gap: 24px;
+}
+
+.mobile-social-list-container {
+  display: flex;
+  gap: 40px;
+}
+.mobile-social-list-menu {
+}
+.mobile-social-list-item {
+  width: 40px;
+  height: 40px;
+}
+.mobile-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  background-size: cover;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-icon-container-menu {
+  fill: #f4f4fd;
+}
+.social-list-item {
+  gap: 16px;
+  justify-content: center;
+}
+
 /* #endregion */
