--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ img {
     display: flex;
     gap: 40px;
   }
+
   .menu-list-link {
     display: block;
     color: #2e2f42;
@@ -195,6 +196,7 @@ img {
 
 @media only screen and (min-width: 768px) {
   .address-container {
+    display: flex;
     font-style: normal;
     margin-left: auto;
   }
@@ -253,248 +255,480 @@ img {
   color: #404bbf;
 }
 
+@media only screen and (min-width: 320px) {
+  .burger-menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: none;
+    background-color: transparent;
+    width: 24px;
+    height: 24px;
+    margin-left: auto;
+    padding: 0;
+  }
+
+  .burger-menu-icon {
+    fill: #2f2f37;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .burger-menu-button {
+    display: none;
+  }
+}
 /* #endregion */
 
 /* #region HERO-SECTION */
 
-.hero-section {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 188px 0;
-  background-color: #2e2f42;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url("../images/people-office.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+@media only screen and (min-width: 320px) {
+  .hero-section {
+    width: 320px;
+    margin: 0 auto;
+    padding: 72px 0;
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/people-office.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .master-href {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    max-width: 216px;
+    margin: 0 auto 72px;
+  }
+  .order-button {
+    background-color: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button-geometry {
+    display: block;
+    margin: 0 auto;
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: 0;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    min-width: 169px;
+    height: 56px;
+  }
 }
 
-.master-href {
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  text-align: center;
-  max-width: 496px;
-  margin: 0 auto 48px;
+@media only screen and (min-width: 768px) {
+  .hero-section {
+    width: 768px;
+    padding: 112px 0;
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/people-office.jpg");
+  }
+
+  .master-href {
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
+  }
+
+  .order-button:hover,
+  .order-button:focus {
+    background-color: #404bbf;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+  }
 }
 
-.order-button {
-  background-color: #4d5ae5;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+@media only screen and (min-width: 1158px) {
+  .hero-section {
+    width: 1440px;
+    padding: 188px 0;
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/people-office.jpg");
+  }
 
-.order-button:hover,
-.order-button:focus {
-  background-color: #404bbf;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-}
+  .master-href {
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 48px;
+  }
 
-.button-geometry {
-  display: block;
-  margin: 0 auto;
-  padding: 16px 32px;
-  border-radius: 4px;
-  border: 0;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  min-width: 169px;
+  .order-button:hover,
+  .order-button:focus {
+    background-color: #404bbf;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+  }
 }
 
 /* #endregion */
 
 /* #region BENEFIT-SECTION */
 
-.benefits-list {
-  display: flex;
-  gap: 24px;
+@media only screen and (min-width: 320px) {
+  .benefits-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+
+  .benefits-list-item {
+    width: 100%;
+  }
+
+  .benefit-item-tile {
+    display: none;
+  }
+
+  .benefits-list-href {
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .benefits-list-description {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 }
 
-.benefits-list-item {
-  width: calc((100% - 3 * 24px) / 4);
+@media only screen and (min-width: 768px) {
+  .benefits-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+
+  .benefits-list-item {
+    width: calc((100% - 24px) / 2);
+  }
+  .benefits-list-href {
+    text-align: left;
+  }
 }
 
-.benefit-item-tile {
-  display: flex;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  width: 264px;
-  height: 112px;
-  background: #f4f4fd;
-  margin-bottom: 8px;
-  justify-content: center;
-  align-items: center;
-}
+@media only screen and (min-width: 1158px) {
+  .benefits-list {
+    gap: 24px;
+  }
 
-.benefits-icon-container {
-  fill: #2e2f42;
-}
+  .benefits-list-item {
+    width: calc((100% - 3 * 24px) / 4);
+  }
 
-.benefits-list-href {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
+  .benefit-item-tile {
+    display: flex;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
+    margin-bottom: 8px;
+    justify-content: center;
+    align-items: center;
+  }
 
-.benefits-list-description {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  .benefits-icon-container {
+    fill: #2e2f42;
+  }
+
+  .benefits-list-href {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .benefits-list-description {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 }
 
 /* #endregion */
 
 /* #region TEAM-SECTION */
 
-.team-section {
-  background-color: #f4f4fd;
+@media only screen and (min-width: 320px) {
+  .team-section {
+    background-color: #f4f4fd;
+  }
+
+  .team-section-href {
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-transform: capitalize;
+    margin: 0 auto 72px;
+  }
+
+  .teams-href {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .teams-description {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #434455;
+    margin-bottom: 8px;
+  }
+
+  .description-container {
+    padding: 32px 0;
+  }
+
+  .team-social-container {
+    display: flex;
+  }
+
+  .team-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: center;
+  }
+
+  .team-list-item {
+    background-color: #ffffff;
+    width: 264px;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
+  }
 }
 
-.team-section-href {
-  text-align: center;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  text-transform: capitalize;
-  margin: 0 auto 72px;
+@media only screen and (min-width: 768px) {
+  .team-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 64px 24px;
+  }
 }
 
-.teams-href {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
+@media only screen and (min-width: 1158px) {
+  .team-list {
+    gap: 24px;
+  }
 
-.teams-description {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #434455;
-  margin-bottom: 8px;
-}
-
-.description-container {
-  padding: 32px 0;
-}
-
-.team-social-container {
-  display: flex;
-}
-
-.team-list {
-  display: flex;
-  gap: 24px;
-}
-
-.team-list-item {
-  background-color: #ffffff;
-  width: calc((100% - 3 * 24px) / 4);
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: #fff;
+  .team-list-item {
+    width: calc((100% - 3 * 24px) / 4);
+  }
 }
 
 /* #endregion */
 
 /* #region PORTFOLIO-SECTION */
 
-.portfolio-href {
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  text-align: center;
-  text-transform: capitalize;
-  margin-bottom: 72px;
+@media only screen and (min-width: 320px) {
+  .portfolio-href {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+  }
+
+  .portfolio-list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+  }
+
+  .portfolio-list-item {
+    width: 288px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .portfolio-list-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    cursor: pointer;
+  }
+
+  .portfolio-list-item:hover .thumb .portfolio-overlay {
+    transform: translateY(0%);
+  }
+
+  .thumb {
+    overflow: hidden;
+    position: relative;
+    width: 288px;
+    height: 280px;
+  }
+
+  .portfolio-overlay {
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .portfolio-description-container {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    margin: 0;
+  }
+
+  .portfolio-list-item-href {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .portfolio-list-item-description {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
 }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 48px 24px;
+@media only screen and (min-width: 768px) {
 }
 
-.portfolio-list-item {
-  width: calc((100% - 48px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+@media only screen and (min-width: 1158px) {
+  .portfolio-href {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+  }
 
-.portfolio-list-item:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  cursor: pointer;
-}
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+  }
 
-.portfolio-list-item:hover .thumb .portfolio-overlay {
-  transform: translateY(0%);
-}
+  .portfolio-list-item {
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.thumb {
-  overflow: hidden;
-  position: relative;
-  width: 360px;
-  height: 300px;
-}
+  .portfolio-list-item:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    cursor: pointer;
+  }
 
-.portfolio-overlay {
-  width: 100%;
-  height: 100%;
-  padding: 40px 32px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  background-color: #4d5ae5;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  .portfolio-list-item:hover .thumb .portfolio-overlay {
+    transform: translateY(0%);
+  }
 
-.portfolio-description-container {
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  padding: 32px 16px;
-  margin: 0;
-}
+  .thumb {
+    overflow: hidden;
+    position: relative;
+    width: 360px;
+    height: 300px;
+  }
 
-.portfolio-list-item-href {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
+  .portfolio-overlay {
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.portfolio-list-item-description {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
+  .portfolio-description-container {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    margin: 0;
+  }
 
+  .portfolio-list-item-href {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .portfolio-list-item-description {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
+}
 /* #endregion */
 
 /* #region FOOTER */
@@ -919,7 +1153,8 @@ img {
   height: 100%;
   padding: 72px 16px 40px;
   background-color: #fff;
-  /* transform: translateX(100%); */
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-mobile.is-open {
@@ -936,7 +1171,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #fff;
 }
 .close-icon {
@@ -945,6 +1180,8 @@ img {
 .mobile-menu-list {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
   gap: 40px;
   margin-bottom: auto;
   /* flex-grow: 1; */
@@ -958,9 +1195,15 @@ img {
   color: #2e2f42;
 }
 
+.mobile-menu-list-link.active {
+  color: #404bbf;
+}
+
 .mobile-address-list {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
   margin-bottom: 48px;
   gap: 24px;
 }
